# vctm

./: README.md  requirements.txt  setup.cfg  setup.py
src/vctm/: chain.py  cli.py  models.py  setup.py
src/vctm/business/: __init__.py  database.py  directory.py  entry.py  organisation.py  project.py
src/vctm/command/: authenticate.py  initialize.py  process.py  report.py  validate.py
tests/: test_models.py  test_project.py  test_setup.py
tests/chain/: test_chain.py  test_command.py  test_executor.py
tests/command/initialize/: test_database_command.py  test_directory_command.py  test_logging_command.py
vctm/: __main__.py  models.py
