[metadata]
name = vctm
version = 0.0.1
author = Cees van de Griend
author_email = cees@griend.eu
description = vctm / victim - Daily journal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ceesvandegriend/vctm.git
project_urls =
    Bug Tracker = https://github.com/ceesvandegriend/vctm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vctm = vctm.cli:cli
